# todo-api-drf

./: db.sqlite3  pyproject.toml
main/: settings.py  urls.py
todo_api/: admin.py  models.py  urls.py  views.py
todo_api/migrations/: 0001_initial.py
